# terraform-refactor

./: .gitignore  CHAT_HISTORY.md  README.md  install.sh  problem_statement.txt  pyproject.toml
.bob/skills/tf-refactor/: SKILL.md
engine/: default_remover.py  defaults_registry.json  emitter.py  grouper.py  main.py  noise_remover.py  parser.py  registry.py  state_merger.py
examples/aws-basic/: generated.tf
examples/azure-basics/: main.tf
refactored/: main.tf  main_analysis.tf
src/terraform_refactor/: __init__.py  cli.py  llm.py  parser.py  refactor.py
tests/: test_pipeline.py
tf-test/: .gitignore  .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
tf-test/tfrefactor/: README.md  requirements.txt
tf-test/tfrefactor/src/tfrefactor/: __init__.py  cli.py  detector.py  emitter.py  parser.py
tf-test/tfrefactor/tests/: test_goal1_module_detection.py
